<resources>
    <string name="app_name">BuetConnect</string>
    <string name="departmentName">departmentName</string>
    <string name="login_text">Please select your department</string>
    <string name="login_button">Select</string>
    <string name="arch_url">https://arch.buet.ac.bd</string>
    <string name="bme_url">https://bme.buet.ac.bd</string>
    <string name="che_url">https://che.buet.ac.bd</string>
    <string name="ce_url">https://ce.buet.ac.bd</string>
    <string name="cse_url">https://cse.buet.ac.bd</string>
    <string name="eee_url">https://eee.buet.ac.bd</string>
    <string name="ipe_url">https://ipe.buet.ac.bd</string>
    <string name="mme_url">https://mme.buet.ac.bd</string>
    <string name="me_url">https://me.buet.ac.bd</string>
    <string name="nce_url">https://nce.buet.ac.bd</string>
    <string name="name_url">https://name.buet.ac.bd</string>
    <string name="urp_url">https://urp.buet.ac.bd</string>
    <string name="wre_url">https://wre.buet.ac.bd</string>
    <string name="arch">arch</string>
    <string name="bme">bme</string>
    <string name="che">che</string>
    <string name="ce">ce</string>
    <string name="cse">cse</string>
    <string name="eee">eee</string>
    <string name="ipe">ipe</string>
    <string name="mme">mme</string>
    <string name="me">me</string>
    <string name="nce">nce</string>
    <string name="name">name</string>
    <string name="urp">urp</string>
    <string name="wre">wre</string>
    <string name="main_activity_text">What do you want to do?</string>
    <string name="about_app_button">About the app</string>
    <string name="change_department_button">Change your department</string>
    <string name="about_1">About</string>
    <string name="buetconnect">BuetConnect</string>
    <string name="about_2">This is an open source project and can be found on</string>
    <string name="about_3">If you liked my work show some ❤️ and ⭐ the repo</string>
    <string name="about_4">For any questions or suggestions, please feel free to email at</string>
    <string name="email">tawhidumar.21@protonmail.com</string>
    <string name="about4">Made with ❤️ by Tawhid Umar</string>
    <string name="logo">logo</string>
    <string name="settings_icon">settings_icon</string>
    <string name="setting_panel_help">Please Choose</string>

</resources>