<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/roboto_flex"
        android:text="@string/about_1"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <ImageView
        android:contentDescription="@string/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/buet_logo"
        android:scaleType="fitCenter"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buetconnect"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="40sp"
        android:fontFamily="@font/roboto_flex"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:fontFamily="@font/roboto_flex"
        android:text="@string/about_2"
        android:layout_gravity="center"/>

    <ImageButton
        android:id="@+id/github_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:src="@drawable/github_logo"
        android:scaleType="fitCenter"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:textAlignment="gravity"
        android:fontFamily="@font/roboto_flex"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_4"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:text="@string/email"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:textSize="15sp"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about4"
        android:layout_margin="20dp"
        android:layout_gravity="bottom|center_horizontal"
        android:fontFamily="@font/roboto_flex"
        android:textSize="15sp"/>
</LinearLayout>
