<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/card_view"
    app:cardCornerRadius="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/hello"
            android:layout_margin="20dp"
            android:layout_gravity="center|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_flex"
            android:text="@string/setting_panel_help"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <Button
                android:id="@+id/change_department_button"
                android:text="@string/change_department_button"
                android:fontFamily="@font/roboto_flex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                />
            <Button
                android:id="@+id/about_app_button"
                android:text="@string/about_app_button"
                android:fontFamily="@font/roboto_flex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>